# LearnOpenGL

./: .gitignore  recompile.fish
LearnOpenGL/: CMakeLists.txt  assrt.h  main.cpp  shader.h
LearnOpenGL/data/shaders/: shader.frag  shader.vert
LearnOpenGL/shaders/: shader.fs  shader.vs
